Refactor path collection and orientation in Tree class to use iterative approach with stack, improving performance and preventing stack overflow