@@ -32,7 +32,7 @@ public class TreeTest {
 
         tree.rootAtMidpoint();
 
-        List<Edge> edges = tree.edges().collect(Collectors.toList());
+        List<Edge> edges = tree.edges().toList();
         assertEquals(edges.size(), 2);
         assertEquals(edges.get(0), new Edge(2, 0, 100));
         assertEquals(edges.get(1), new Edge(2, 1, 0.1));
@@ -48,13 +48,29 @@ public class TreeTest {
 
         tree.rootAtMidpoint();
 
-        List<Edge> edges = tree.edges().collect(Collectors.toList());
+        List<Edge> edges = tree.edges().toList();
         assertEquals(edges.size(), 5);
         assertEquals(edges.get(0), new Edge(5, 3, 1));
         assertEquals(edges.get(1), new Edge(3, 0, 100));
         assertEquals(edges.get(2), new Edge(5, 4, 1));
         assertEquals(edges.get(3), new Edge(4, 1, 1));
         assertEquals(edges.get(4), new Edge(4, 2, 1));
+    }
+
+    @Test
+    public void rootAtMidpoint_LongPath_DoesNotOverflowStack() {
+        int depth = 200_000;
+        Tree tree = new Tree(new String[]{"A", "B"});
+        int previous = 0;
+        for (int i = 0; i < depth; i++) {
+            int next = i == depth - 1 ? 1 : i + 2;
+            tree.add(new Edge(previous, next, 1));
+            previous = next;
+        }
+
+        tree.rootAtMidpoint();
+
+        assertEquals(tree.edges().count(), depth);
     }
 
 }
